{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 535,
  "lineage": "366ca022-6577-2807-11a9-48401d9adf4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03530d3592c873367",
            "arn": "arn:aws:ec2:us-east-1:851725284981:elastic-ip/eipalloc-03530d3592c873367",
            "domain": "vpc",
            "id": "eipalloc-03530d3592c873367",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-223-226-169.compute-1.amazonaws.com",
            "public_ip": "44.223.226.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT EIP"
            },
            "tags_all": {
              "Name": "NAT EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intotheinterwebs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:internet-gateway/igw-01917ed6af44db78a",
            "id": "igw-01917ed6af44db78a",
            "owner_id": "851725284981",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03530d3592c873367",
            "association_id": "eipassoc-0df712b590a9e2ecb",
            "connectivity_type": "public",
            "id": "nat-0831b77a702060e62",
            "network_interface_id": "eni-0d43fb3968b89d985",
            "private_ip": "10.0.2.203",
            "public_ip": "44.223.226.169",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc0a245bfc83d7cc",
            "tags": {
              "Name": "NATGW"
            },
            "tags_all": {
              "Name": "NATGW"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app_layer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:network-acl/acl-071714aef6b08a18e",
            "egress": [],
            "id": "acl-071714aef6b08a18e",
            "ingress": [],
            "owner_id": "851725284981",
            "subnet_ids": [],
            "tags": {
              "Name": "app-layer-nacl"
            },
            "tags_all": {
              "Name": "app-layer-nacl"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db_layer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:network-acl/acl-0c3ed31da52cf5c40",
            "egress": [],
            "id": "acl-0c3ed31da52cf5c40",
            "ingress": [],
            "owner_id": "851725284981",
            "subnet_ids": [],
            "tags": {
              "Name": "db-layer-nacl"
            },
            "tags_all": {
              "Name": "db-layer-nacl"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:network-acl/acl-05cf808a082e5e207",
            "egress": [],
            "id": "acl-05cf808a082e5e207",
            "ingress": [],
            "owner_id": "851725284981",
            "subnet_ids": [],
            "tags": {
              "Name": "public-nacl"
            },
            "tags_all": {
              "Name": "public-nacl"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "app_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-091ed22c185d563a3",
            "network_acl_id": "acl-071714aef6b08a18e",
            "subnet_id": "subnet-068e8fb06140b2fb6"
          },
          "dependencies": [
            "aws_network_acl.app_layer",
            "aws_subnet.private",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "app_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-065baca4d3eca47af",
            "network_acl_id": "acl-071714aef6b08a18e",
            "subnet_id": "subnet-0c1960efdba686730"
          },
          "dependencies": [
            "aws_network_acl.app_layer",
            "aws_subnet.private",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "db_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0263f8bce3ed5429d",
            "network_acl_id": "acl-0c3ed31da52cf5c40",
            "subnet_id": "subnet-0b63d14e97b5f1c2d"
          },
          "dependencies": [
            "aws_network_acl.db_layer",
            "aws_subnet.private",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "db_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0596f7a4af2161901",
            "network_acl_id": "acl-0c3ed31da52cf5c40",
            "subnet_id": "subnet-043541911671f5a86"
          },
          "dependencies": [
            "aws_network_acl.db_layer",
            "aws_subnet.private",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-03f3430973de31e43",
            "network_acl_id": "acl-05cf808a082e5e207",
            "subnet_id": "subnet-0212e9335c905c9f2"
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public-4b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-009fd45b2ae6211d5",
            "network_acl_id": "acl-05cf808a082e5e207",
            "subnet_id": "subnet-0dc0a245bfc83d7cc"
          },
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_inbound_custom_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-754161977",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-071714aef6b08a18e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.99.0.0/16",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1956585720",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-071714aef6b08a18e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.99.0.0/16",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3984410361",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-071714aef6b08a18e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.99.0.0/16",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3037855544",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-071714aef6b08a18e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_outbound_custom_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.99.0.0/16",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-355867865",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-071714aef6b08a18e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-298044644",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-071714aef6b08a18e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app_outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4210325479",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-071714aef6b08a18e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_inbound_custom_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1977892954",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c3ed31da52cf5c40",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_inbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.99.0.0/16",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3026886554",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c3ed31da52cf5c40",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_outbound_custom_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.99.0.0/16",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2983356581",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c3ed31da52cf5c40",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_outbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1578107803",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c3ed31da52cf5c40",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db_layer",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound_custom_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2572685812",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05cf808a082e5e207",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3241453621",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05cf808a082e5e207",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1490472500",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05cf808a082e5e207",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-12220405",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05cf808a082e5e207",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound_custom_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1852956772",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05cf808a082e5e207",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1787048025",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05cf808a082e5e207",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2176027482",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05cf808a082e5e207",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2235980647",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05cf808a082e5e207",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-069d89999ecf925aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0831b77a702060e62",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-069d89999ecf925aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:route-table/rtb-069d89999ecf925aa",
            "id": "rtb-069d89999ecf925aa",
            "owner_id": "851725284981",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRT"
            },
            "tags_all": {
              "Name": "PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:route-table/rtb-0cfeeac5936a9c942",
            "id": "rtb-0cfeeac5936a9c942",
            "owner_id": "851725284981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01917ed6af44db78a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.intotheinterwebs",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRT_assoc_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b45a1a834ae0d7dc",
            "route_table_id": "rtb-069d89999ecf925aa",
            "subnet_id": "subnet-068e8fb06140b2fb6"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRT_assoc_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c31584dfd63aa14a",
            "route_table_id": "rtb-069d89999ecf925aa",
            "subnet_id": "subnet-0b63d14e97b5f1c2d"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRT_assoc_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04845fcc77b0e341a",
            "route_table_id": "rtb-069d89999ecf925aa",
            "subnet_id": "subnet-0c1960efdba686730"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRT_assoc_private_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d442f5ac08e923c1",
            "route_table_id": "rtb-069d89999ecf925aa",
            "subnet_id": "subnet-043541911671f5a86"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRT_assoc_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c76a9ef63f0f33a",
            "route_table_id": "rtb-0cfeeac5936a9c942",
            "subnet_id": "subnet-0212e9335c905c9f2"
          },
          "dependencies": [
            "aws_internet_gateway.intotheinterwebs",
            "aws_route_table.public_route_table",
            "aws_subnet.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRT_assoc_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e14fe25d47bbec93",
            "route_table_id": "rtb-0cfeeac5936a9c942",
            "subnet_id": "subnet-0dc0a245bfc83d7cc"
          },
          "dependencies": [
            "aws_internet_gateway.intotheinterwebs",
            "aws_route_table.public_route_table",
            "aws_subnet.public",
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:subnet/subnet-068e8fb06140b2fb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068e8fb06140b2fb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725284981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        },
        {
          "index_key": "private-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:subnet/subnet-0b63d14e97b5f1c2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b63d14e97b5f1c2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725284981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-3"
            },
            "tags_all": {
              "Name": "private-3"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        },
        {
          "index_key": "private-5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:subnet/subnet-0c1960efdba686730",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1960efdba686730",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725284981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-5"
            },
            "tags_all": {
              "Name": "private-5"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        },
        {
          "index_key": "private-6",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:subnet/subnet-043541911671f5a86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043541911671f5a86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725284981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-6"
            },
            "tags_all": {
              "Name": "private-6"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:subnet/subnet-0212e9335c905c9f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0212e9335c905c9f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725284981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        },
        {
          "index_key": "public-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:subnet/subnet-0dc0a245bfc83d7cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc0a245bfc83d7cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725284981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-4"
            },
            "tags_all": {
              "Name": "public-4"
            },
            "vpc_id": "vpc-017ce56092372dd6b"
          },
          "dependencies": [
            "aws_vpc.DeployLab_VPC",
            "random_id.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DeployLab_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725284981:vpc/vpc-017ce56092372dd6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0682558519571c9d6",
            "default_route_table_id": "rtb-0c5c1ef5180e4fb6b",
            "default_security_group_id": "sg-0e16f185a8f175781",
            "dhcp_options_id": "dopt-0f32fbf26dd99f9f2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017ce56092372dd6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5c1ef5180e4fb6b",
            "owner_id": "851725284981",
            "tags": {
              "Name": "DeployLab_VPC-3e29dd7a7a6c2463"
            },
            "tags_all": {
              "Name": "DeployLab_VPC-3e29dd7a7a6c2463"
            }
          },
          "dependencies": [
            "random_id.vpc"
          ]
        }
      ]
    }
  ]
}